@@ -3,6 +3,9 @@ Package: PSCBS
 ==============
 
 Version: 0.41.0 [2014-03-26]
+o Now estimateKappaByC1Density() give more informative error messages
+  if it failed to identify modes for estimating the parameter.
+o Added argument 'from' to estimateKappaByC1Density().
 o BUG FIX: updateMeansC1C2() for PairedPSCBS did not handle missing
   values (=splitters) in the 'c1c2Swap' field.
 o BUG FIX: updateMeans() for PairedPSCBS and NonPairedPSCBS returned the
